tests/sksl/errors/golden/ArrayUnspecifiedDimensions.glsl
### Compilation failed:

error: 1: arrays without an explicit size must use an initializer expression
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 1: array size must be specified
error: 12: expected 'int', but found 'float'
error: 13: expected 'int', but found 'bool'
error: 1: arrays without an explicit size must use an initializer expression
14 errors
